--- a/app.json
+++ b/app.json
@@ -1,13 +1,13 @@
 {
   "expo": {
-    "name": "خدمة",
-    "slug": "khedmah",
+    "name": "حراج المملكة للمواشي",
+    "slug": "mawashi",
     "privacy": "public",
     "platforms": [
       "ios",
       "android"
     ],
-    "version": "0.0.7",
+    "version": "1.0.7",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -23,19 +23,20 @@
     ] ,
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.shabaka.khedmah",
+      "bundleIdentifier": "com.shabaka.mawashi",
       "infoPlist": {
         "NSCameraUsageDescription": "We need this permession to add photos to your ads.",
         "NSLocationWhenInUseUsageDescription": "app need location to show the nearest ads of you.",
         "NSLocationAlwaysUsageDescription": "app need location to show the nearest ads of you.",
         "NSMotionUsageDescription": "app need location to show the nearest ads of you.",
         "NSPhotoLibraryAddUsageDescription": "We need this permession to add photos to your ads.",
-        "NSPhotoLibraryUsageDescription": "We need this permession to add photos to your ads"
+        "NSPhotoLibraryUsageDescription": "We need this permession to add photos to your ads",
+        "NSMicrophoneUsageDescription": "This app uses the microphone to add videos to your ads."
       }
     },
     "android": {
-      "package": "com.shabaka.khedmah",
-      "versionCode": 7,
+      "package": "com.shabaka.mawashi",
+      "versionCode": 17,
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyBCtrxqozj9xLkL58Frh0Gl4fiQZ_oATZI"
