--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-render-html": "^4.1.2",
     "react-native-restart": "0.0.12",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~2.9.0",
     "react-native-shimmer-placeholder": "git+https://github.com/tomzaku/react-native-shimmer-placeholder.git#expo",
     "react-native-simple-toast": "0.0.8",
